--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+<head>
+<link rel="icon" href="file:///C:/Users/The%20DeClerk%20Family/Downloads/FundyFilms/FundyFilms/Preview.png" type="image/png">
+</head>
 <center>
 <body>
 <h1>Group Application</h1>
