--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel="icon" href="file:///C:/Users/The%20DeClerk%20Family/Downloads/FundyFilms/FundyFilms/Preview.png" type="image/png">
+<link rel="icon" href="https://github.com/FundyFilms24/FundyFilms-Group_Applications/blob/main/Preview.png?raw=true" type="image/png">
 </head>
 <center>
 <body>
