Update index.html logp

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel="icon" href="https://github.com/FundyFilms24/FundyFilms-Group_Applications/blob/main/Preview.png?raw=true" type="image/png">
+<link rel="icon" href="https://raw.githubusercontent.com/FundyFilms24/FundyFilms-Group_Applications/refs/heads/main/Logo.png" type="image/png">
 </head>
 <center>
 <body>
